After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758586 - mssdemux: missing depth in audio caps
mssdemux: missing depth in audio caps
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-24 11:34 UTC by Maroš Ondrášek
Modified: 2015-11-24 18:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch: mssdemux-add-depth-field-to-audio-caps-if-available (1.69 KB, patch)
2015-11-24 11:34 UTC, Maroš Ondrášek
none Details | Review
updated first patch (2.71 KB, patch)
2015-11-24 12:05 UTC, Maroš Ondrášek
committed Details | Review

Description Maroš Ondrášek 2015-11-24 11:34:53 UTC
Created attachment 316155 [details] [review]
patch: mssdemux-add-depth-field-to-audio-caps-if-available

Our sink reconstructs WAVEFORMATEX structure for WMA and WMA Pro audio from provided caps.

Problem is that mssdemux, doesn't set 'depth' field in audio caps, which is necessary to reconstruct WAVEFORMATEX.

Because of this, are following samples with WMA Pro on our HW without sound:
http://playready.directtaps.net/smoothstreaming/TTLSS720VC1/To_The_Limit_720.ism/Manifest
http://mediadl.microsoft.com/mediadl/iisnet/smoothmedia/Experience/BigBuckBunny_720p.ism/Manifest

I suggest to retrieve 'depth' from "WaveFormatEx" if it's available in Manifest and set it in caps.
Comment 1 Maroš Ondrášek 2015-11-24 12:05:15 UTC
So I find out, that we can also retrieve depth from "BitsPerSample" in Manifest.
Comment 2 Maroš Ondrášek 2015-11-24 12:05:45 UTC
Created attachment 316159 [details] [review]
updated first patch
Comment 3 Thiago Sousa Santos 2015-11-24 12:46:03 UTC
commit b902c4a2930b675225a96913ea29ff205124a33c
Author: Maroš Ondrášek <mx3ldev@gmail.com>
Date:   Tue Nov 24 11:50:51 2015 +0100

    mssdemux: add depth field to audio caps if available
    
    depth field can be retrieved from "BitsPerSample" or
    from "WaveFormatEx" structure, if provided in Manifest
    
    https://bugzilla.gnome.org/show_bug.cgi?id=758586
Comment 4 Nicolas Dufresne (ndufresne) 2015-11-24 17:44:57 UTC
I'm a bit confused, wasn't depth field removed between 0.10 and 1.0 ?
Comment 5 Thiago Sousa Santos 2015-11-24 18:05:19 UTC
(In reply to Nicolas Dufresne (stormer) from comment #4)
> I'm a bit confused, wasn't depth field removed between 0.10 and 1.0 ?

For raw audio, yes. It is still used in some encoded formats.